server/serveroutput.txt

> server@1.0.0 start
> ts-node server.ts

C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
server.ts(45,45): error TS7006: Parameter 'player' implicitly has an 'any' type.

    at createTSError (C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Squirrel\Desktop\tavern11\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Function.Module._load (node:internal/modules/cjs/loader:960:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12) {
  diagnosticCodes: [ 7006 ]
}
npm ERR! Lifecycle script `start` failed with error: 
npm ERR! Error: command failed 
npm ERR!   in workspace: server@1.0.0 
npm ERR!   at location: C:\Users\Squirrel\desktop\tavern11\server 
